<resources>
    <string name="version">Version 1.0</string>
    <string name="app_name">Axcept</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="addPageTitle">Enter application details</string>
    <string name="college">College</string>
    <string name="website">Website</string>
    <string name="employment">Employment</string>
    <string name="scholarship">Scholarship</string>
    <string name="details">Details</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="todo">Todo</string>
    <string name="notes">Notes</string>
    <string name="job_type">Job Type</string>
    <string name="salary">Salary</string>
    <string name="job_post_date">Job Post Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="date_submitted">Date Submitted</string>
    <string name="requirements">Requirements</string>
    <string name="login_username">Login Username</string>
    <string name="award_amount">Award Amount</string>
    <string name="noDeadline">No deadline</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="others">Others</string>
    <string name="contactEmail">Contact Email</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="about">About</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="ddMMyyyy">dd/MM/yyyy</string>
    <string name="MMddyyyy">MM/dd/yyyy</string>
    <string name="average_cost">Average Cost</string>
    <string name="job_title">Job Title</string>
    <string name="address">Address</string>
    <string-array name="statusList">
        <item>Incomplete</item>
        <item>Submitted</item>
        <item>Accepted</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="dateFormatList">
        <item>mm/dd/yyyy</item>
        <item>dd/mm/yyyy</item>

    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about_page">About</string>
</resources>
