<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/addEntryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/outerLayoutStatusDeadlineSubmitted"
            style="@style/innerLinearLayoutAddEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/addEntryTextView"
                    android:text="@string/status" />

                <android.support.v7.widget.CardView
                    style="@style/smallerCardViewInsideCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:foregroundGravity="center"
                    android:stateListAnimator="@animator/button_elevate"
                    app:cardUseCompatPadding="true">

                    <Spinner
                        android:id="@+id/statusSpinner"
                        style="@style/addEntryEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:textAlignment="center"></Spinner>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/deadlineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/addEntryTextView"
                    android:text="@string/deadline" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">


                    <android.support.v7.widget.CardView
                        android:id="@+id/deadlineAddDateCard"
                        style="@style/smallerCardViewInsideCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stateListAnimator="@animator/button_elevate"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/deadlineDateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/defaultTextViewMargin"
                            android:text="@string/choose_date"

                            android:textSize="16sp" />
                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:id="@+id/removeDeadlineCardView"
                        style="@style/smallerCardViewInsideCardView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:onClick="removeDeadline"
                        android:stateListAnimator="@animator/button_elevate">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_clear_grey_24dp" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dateSubmittedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/addEntryTextView"
                    android:text="@string/date_submitted" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/dateSubmittedCardView"
                        style="@style/smallerCardViewInsideCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:stateListAnimator="@animator/button_elevate"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/dateSubmittedText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/defaultTextViewMargin"
                            android:text="@string/choose_date"
                            android:textSize="16sp" />
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/removeDateSubmittedCardView"
                        style="@style/smallerCardViewInsideCardView"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:onClick="removeDateSubmitted"
                        android:stateListAnimator="@animator/button_elevate">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_clear_grey_24dp" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/addEntryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/innerLinearLayoutAddEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/requirements" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/requirementEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textMultiLine" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/description" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/descriptionEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textMultiLine" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/todo" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/todoEditText"
                    style="@style/addEntryEditText"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textMultiLine" />
            </android.support.v7.widget.CardView>


            <TextView
                style="@style/addEntryTextView"
                android:text="@string/notes" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/notesEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textMultiLine" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/addEntryCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/innerLinearLayoutAddEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/website" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/websiteEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textWebEditText" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/address" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/locationEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textPostalAddress" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/contactEmail" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/addEntryEditText"
                    android:inputType="textEmailAddress" />
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/addEntryTextView"
                android:text="@string/contact_phone" />

            <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                <EditText
                    android:id="@+id/numberEditText"
                    style="@style/addEntryEditText"
                    android:inputType="phone" />
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>