<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="12dp"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        android:stateListAnimator="@animator/button_elevate"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <!--RelativeLayout is the one being clicked to start a new activity-->
        <RelativeLayout
            android:id="@+id/relativeLayoutInsideCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="12dp">

            <TextView
                android:stateListAnimator="@animator/button_elevate"
                android:id="@+id/entryCardNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/entryDeadlineCardView"
                android:paddingBottom="4dp"
                android:text="@string/name"
                android:textColor="#616161"
                android:textSize="@dimen/entry_card_name_size" />


            <TextView
                android:id="@+id/entryCardCompanyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/entryCardNameTextView"
                android:layout_toStartOf="@id/entryDeadlineCardView"
                android:paddingBottom="4dp"
                android:text="Company/Location"
                android:textSize="@dimen/smallTextViewEntryCard" />

            <TextView
                android:id="@+id/entryCardDetailsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/entryCardCompanyTextView"
                android:layout_marginBottom="14dp"
                android:layout_toStartOf="@id/entryDeadlineCardView"
                android:text="@string/details"
                android:textSize="@dimen/smallTextViewEntryCard" />

            <android.support.v7.widget.CardView
                android:id="@+id/entryDeadlineCardView"
                style="@style/smallerCardViewInsideCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:backgroundTint="#0091ea"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/button_elevate">

                <TextView
                    android:id="@+id/entryCardDeadlineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultTextViewMargin"
                    android:text="@string/deadline"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="@dimen/smallTextViewEntryCard" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/smallerCardViewInsideCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/entryDeadlineCardView"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="12dp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/button_elevate">

                <TextView
                    android:textSize="@dimen/smallTextViewEntryCard"
                    android:id="@+id/entryCardStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/defaultTextViewMargin"
                    android:text="@string/status"
                    android:textColor="#00897B" />

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>