<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_entry_employment">

    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp">

        <LinearLayout
            style="@style/outerLinearLayoutAddEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/addEntryCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/innerLinearLayoutAddEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        style="@style/addEntryTextView"
                        android:text="@string/job_title" />

                    <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                        <EditText
                            android:id="@+id/nameEditText"
                            style="@style/addEntryEditText"
                            android:inputType="textCapWords" />
                    </android.support.v7.widget.CardView>


                    <TextView
                        style="@style/addEntryTextView"
                        android:text="@string/company" />

                    <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                        <EditText
                            android:id="@+id/companyEditText"
                            style="@style/addEntryEditText"
                            android:inputType="textCapWords" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        style="@style/addEntryTextView"
                        android:text="@string/job_type" />

                    <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                        <EditText
                            android:id="@+id/jobTypeEditText"
                            style="@style/addEntryEditText"
                            android:inputType="textCapWords" />
                    </android.support.v7.widget.CardView>


                    <TextView
                        style="@style/addEntryTextView"
                        android:text="@string/salary" />

                    <android.support.v7.widget.CardView style="@style/addEntryEditTextCard">

                        <EditText
                            android:id="@+id/salaryEditText"
                            style="@style/addEntryEditText" />
                    </android.support.v7.widget.CardView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/addEntryTextView"
                            android:text="@string/job_post_date" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="20dp"
                            android:orientation="horizontal">


                            <android.support.v7.widget.CardView
                                android:id="@+id/jobPostDateCardView"
                                style="@style/smallerCardViewInsideCardView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:stateListAnimator="@animator/button_elevate"
                                app:cardUseCompatPadding="true">

                                <TextView
                                    android:id="@+id/jobPostDateTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/defaultTextViewMargin"
                                    android:text="@string/choose_date"
                                    android:textSize="16sp" />
                            </android.support.v7.widget.CardView>


                            <android.support.v7.widget.CardView
                                android:id="@+id/removeJobPostCardView"
                                style="@style/smallerCardViewInsideCardView"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_gravity="center"
                                android:onClick="removeJobPostDate"
                                android:stateListAnimator="@animator/button_elevate">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_clear_grey_24dp" />
                            </android.support.v7.widget.CardView>

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <include
                layout="@layout/shared_lower_add_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_entry_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_done_grey_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/shareButton"
        style="@style/smallerCardViewInsideCardView"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/button_elevate"
        app:cardCornerRadius="18dp"
        app:layout_anchor="@id/add_entry_add_fab"
        app:layout_anchorGravity="left|center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="24dp"
            android:foregroundGravity="center"
            android:padding="@dimen/cardView_padding"
            android:src="@drawable/ic_share_grey_24dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/deleteButton"
        style="@style/smallerCardViewInsideCardView"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/button_elevate"
        app:cardCornerRadius="18dp"
        app:layout_anchor="@id/add_entry_add_fab"
        app:layout_anchorGravity="right|center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="4dp"
            android:padding="@dimen/cardView_padding"
            android:src="@drawable/ic_delete_grey_24dp" />
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>